--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -1,3 +1,3 @@
-ErrorDocument 403 /DAW-MP02/404.html
-ErrorDocument 404 /DAW-MP02/404.html
+ErrorDocument 403 /0484NB/404.html
+ErrorDocument 404 /0484NB/404.html
 # k54EDNWXxwdU
