Exercicis de Llistes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,9 @@ copyright: Copyleft &copy; 2024 - 2025 Narcís
 ## https://www.mclibre.org/consultar/python/ejercicios/ej-listas-1.html
 ## https://certidevs.com/ejercicios-python-listas-codigo
 ## https://www.w3resource.com/python-exercises/list/
-
+##
+## Apunts curs de Python (amic Jordi) ASIR
+## https://www.mclibre.org/consultar/python/
 theme:
     language: ca
     logo: img/Logo_Montilivi_2015_blanc.png
@@ -144,11 +146,13 @@ nav:
       - "Exercicis":
         - "Exercici d'escriptures i assignacions" : 'python/py_001ex.md'
         - "Exercicis d'alternatives" : 'python/py_002ex.md'
-        - "Conceptes bàsics" : 'python/py_004ex.md'
-        - "Booleans" : 'python/py_005ex.md'
-        - "Condicionals i Comparacions - blackjack" : 'python/py_007ex.md'
-        - "Strings" : 'python/py_009ex.md'
-        - "Llistes" : 'python/py_010ex.md'
+        - "Exercicis de llistes" : 'python/py_lists001ex.md'
+
+        # - "Conceptes bàsics" : 'python/py_004ex.md'
+        # - "Booleans" : 'python/py_005ex.md'
+        # - "Condicionals i Comparacions - blackjack" : 'python/py_007ex.md'
+        # - "Strings" : 'python/py_009ex.md'
+        # - "Llistes" : 'python/py_010ex.md'
 
     - "Turtle" :
       - "Turtle" : 'turtle/tu_000.md'
