--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -188,8 +188,10 @@ nav:
       - "Lectura de fitxers de diferents tipus: XML" : 'fitxers/fitxers_005.md'
       - "Accés a bases de dades SQL: SQLite" : 'fitxers/fitxers_006.md'
       - "Accés a bases de dades SQL: MariaDB" : 'fitxers/fitxers_007.md'
+      - "DBeaver" : 'fitxers/fitxers_00a.md'
       - "Exercicis" :
         - "Exercicis de Fitxers" : 'fitxers/fitxers_001ex.md'
+        - "Exercicis de Bases de dades" : 'fitxers/fitxers_002ex.md'
 
     - "Tkinter" :
       - "Tkinter" : 'tkinter/tk_000.md'
